# ChangeLog for dev-perl/Net-Amazon
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Amazon/ChangeLog,v 1.43 2012/06/24 12:58:25 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  21 Apr 2012; Torsten Veller <tove@gentoo.org> -Net-Amazon-0.590.0.ebuild,
  -Net-Amazon-0.600.0.ebuild:
  Cleanup

  05 Apr 2012; Jeff Horelick <jdhore@gentoo.org> Net-Amazon-0.610.0.ebuild:
  marked x86 per bug 404683

  28 Mar 2012; Agostino Sarubbo <ago@gentoo.org> Net-Amazon-0.610.0.ebuild:
  Stable for amd64, wrt bug #404683

*Net-Amazon-0.610.0 (30 Oct 2011)

  30 Oct 2011; Torsten Veller <tove@gentoo.org> +Net-Amazon-0.610.0.ebuild:
  Version bump

*Net-Amazon-0.600.0 (06 Sep 2011)

  06 Sep 2011; Robin H. Johnson <robbat2@gentoo.org>
  +Net-Amazon-0.600.0.ebuild:
  Version bump via perl-bump experimental tool.

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Net-Amazon-0.59.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> Net-Amazon-0.590.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*Net-Amazon-0.590.0 (29 Aug 2011)

  29 Aug 2011; Torsten Veller <tove@gentoo.org> +Net-Amazon-0.590.0.ebuild:
  Change version scheme

  11 Jun 2010; Torsten Veller <tove@gentoo.org> -Net-Amazon-0.55.ebuild:
  Cleanup

  17 Apr 2010; Torsten Veller <tove@gentoo.org> Net-Amazon-0.59.ebuild:
  Stable on amd64, x86 (#314467)

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -Net-Amazon-0.57.ebuild:
  Cleanup

*Net-Amazon-0.59 (10 Nov 2009)

  10 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  +Net-Amazon-0.59.ebuild:
  Version bump via perl-bump experimental tool.

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -Net-Amazon-0.50.ebuild:
  Cleanup

  18 Sep 2009; Torsten Veller <tove@gentoo.org> Net-Amazon-0.55.ebuild:
  Stable on amd64 (#283969)

*Net-Amazon-0.57 (09 Sep 2009)
