@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Net-Amazon-0.61.tar.gz 219692 SHA256 4de24161ea4ecc0e7c153829b7b36f40125c42b88384efb26bf0f5a08998aa57 SHA512 fd1bfc481a75715fff97d1c041b321773db0da5befec65799b944a1d57e6394e7037b022a3827759cd4a0101518450eee7e9acef9d3178bd838416257ac7b08e WHIRLPOOL 5ffdded4765e02f3bd1df4e308378bf59c8c0d343899e0a22e95a59eccf341eb7296194a8e67f87e59c8ed836ffc833789cb9531ce12ee97522a4a94547bc3e9
+DIST Net-Amazon-0.62.tar.gz 219344 SHA256 e26ade6842f070e307eb2bf13040a75050fac69af8f7eca322f75a64b4455c06 SHA512 61e454ca611e0f0de45f7f4661c4b784f6f49cadcfdf5f63fe2cc0d66e7bccf755672bc3848f636cb94eda89f1d18b24ade1cf9a9df89afec76e52a306e7638f WHIRLPOOL 9c56cfddf9e4cda4c2bf86c6938c66d6eb40f9564a0e945ce0b3eeb65a76ac94591c3d710ff5f37e8931ee7930120982adacb6a84b0afb1b8aa837a27c8c7657
 EBUILD Net-Amazon-0.610.0.ebuild 617 SHA256 df0706e58cdd3e12b1c8aff475aafb7eaf064e2948b294ca170c1c14045d545b SHA512 f51cde2c76bf26dc7b7c3581e67561dce36784a4500f4c1fc4f159d4bb08ee341f40e5acb27ea22a9141933fe33b750660637484b3839595c2d866d160f0a8f6 WHIRLPOOL 7b331b4e458fe0dca02ca5dfdd9642c36089dcfc3efef0bb56db632558142a7c8b8ec35be26c706930f360fbaf4a1a79c27ab231ca280713a2fac64abd85c055
-MISC ChangeLog 5239 SHA256 6fb59361cd8647e32c8eaf71a83aed72f4d6fffc60e8e516dac5792cba8e1bd9 SHA512 72af3a6ef05b3e80384de32711c2e09452f064f9a824723a5b24f14ebad2f3a2e14e18410c83c64faf892e080842147aadfa2faa1257ef876946b5bb033b40d6 WHIRLPOOL 97430881671afb993307d8187ced3e54f364a24daf442b0017422679aff04f55194823e28a3e7316e5cc6657f6a26fe3a4585bead2f3328dd97e9f403c34ea6b
-MISC metadata.xml 38935 SHA256 51584c9f3c0e724880b1fb4ae2cf032ea5e7635c338c49ac10ec64edf3df0e85 SHA512 18d484e99708c0e49f4b354c72fc4404de775a3dde025e243e6ff8ccb3e31fe868533e24854e4d927f5ff556ee8da547df15fbf16626c9ad62780ffc9dc58861 WHIRLPOOL f7a2b24909846a36cd2a97c4c072f079a74323a10afb89c5d6cf55c6e20d201df4e8bac0edbe5437a93ffd51ab1c668a55d7de14060d420ee10351fa1da77052
+EBUILD Net-Amazon-0.620.0.ebuild 638 SHA256 3fd523305d099fc232fb6708602aa302d0996d7bef007557118c70e59dc6410c SHA512 bc627a4f6ca334e42b46c0355d927f3c9edda3c2b4c287f3199f4042032f23430f8f327b70cb57d05e15eb9afd7ce2412d99304b261f5ca82dc16fb7782984c6 WHIRLPOOL efb858f943e96c80488ad2ebd8d2abdadfe7fb325754e204a1cc9f3c15ea0b56f48c75b12c452e77b9885b2dd17226be4de1257ef60bb23937d58b593c113361
+MISC ChangeLog 5382 SHA256 88065b9608ec70d5ff419a80507f9e6e5b4bfa0890a7bfe2b46af6ad25ac0326 SHA512 0e0ad2242136147c4c946f2b3903d8926a0e138be66dab64e14d2deae89f2d90188f6dde57a3aa0aa1f957d60018bcc36855ddc1d8a80d5bff48c3020958d85a WHIRLPOOL ce800ece85b81b67c01d6ec3e99030b373b3b81b668cd13c8aaf531e4b2bdf8ad644aad093a5258bac0d75bc12a4397512b28860f29eb8b93b78d5d2df89e868
+MISC metadata.xml 41723 SHA256 816fc26216d9b888f135e06820cf0ed3453c9ce78a9a1b6d37efff814771e08a SHA512 09a187f70f1a5d80f8c9bdf0929ee50e2c693d2bf150291b8e0e23e76334ecf91070264f3e62b28ed8b6f518fdb477a108a1ccda3a9215df6defabe9f6fb2723 WHIRLPOOL facf4105b3eaaeb2165e81d8e235f23d497fb53f7b7d856b8eabc5349cf500198615c9e1f2af5721f9d321620c71bbcbebb51032b62b750b3a3d8559214251d4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlEFDMgACgkQV3J2n04EauzWRQCgjpQzJl/FgZUEfaB4ZAey4k7N
+rhoAoKoauMH66E8qKY5J5y50qXTzD10o
+=ebZw
+-----END PGP SIGNATURE-----
