@@ -163,6 +163,19 @@
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::de::Video</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::de::VideoGames</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::de::Watches</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::Books</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::DVD</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::EAN</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::Electronics</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::ForeignBooks</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::Keywords</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::KindleStore</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::Kitchen</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::Music</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::Software</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::Toys</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::VideoGames</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::es::Watches</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::fr::Actor</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::fr::Artist</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::fr::AudienceRating</remote-id>
@@ -216,6 +229,22 @@
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::fr::Video</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::fr::VideoGames</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::fr::Watches</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::Baby</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::Books</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::DVD</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::EAN</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::Electronics</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::ForeignBooks</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::Keywords</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::KindleStore</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::Kitchen</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::Lighting</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::Music</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::Shoes</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::Software</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::Toys</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::VideoGames</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::it::Watches</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::jp::Actor</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::jp::Apparel</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::jp::Artist</remote-id>
@@ -351,6 +380,7 @@
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::us::Count</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::us::DVD</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::us::Director</remote-id>
+    <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::us::EAN</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::us::Electronics</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::us::Format</remote-id>
     <remote-id type="cpan-module">Net::Amazon::Validate::ItemSearch::us::GourmetFood</remote-id>
